--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfoV2</title>
+    <link rel="shortcut icon" href="src/assets/img/apple-icon-57x57.png" type="image/x-icon">
+    <title>Ledez Grégory</title>
   </head>
   <body>
     <div id="root"></div>
