--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="src/assets/img/apple-icon-57x57.png" type="image/x-icon">
+    <link rel="shortcut icon" href="src/assets/img/Capture d’écran 2022-12-08 à 09.04.36.png" type="image/x-icon">
     <title>Ledez Grégory</title>
   </head>
   <body>
