--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="src/assets/img/Capture d’écran 2022-12-08 à 09.04.36.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://use.typekit.net/tgu1yzm.css"/>
     <title>Ledez Grégory</title>
   </head>
   <body>
