--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="src/assets/img/Capture d’écran 2022-12-08 à 09.04.36.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/tgu1yzm.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <title>Ledez Grégory</title>
   </head>
   <body>
