last resoinsive issues

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" />
     <link rel="shortcut icon" href="src/assets/img/Capture d’écran 2022-12-08 à 09.04.36.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/tgu1yzm.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
